--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Zebra font</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
-  <body class="">
+  <body class="bg-[#7B4A38]">
+    <main class="mx-4">
+      <!-- 1. section -->
+      <section>
+        <div class="pt-10">
+          <img src="img/zebra_font.svg" alt="zebra_font">
+        </div>
+        <p class="text-[#EEECDA] text-xs pt-4">Zebra fonten er en moderne, legende og eksklusiv font, som bringer det feminine frem på ethvert produkt eller website. Fonten kan bruges på mange forskellige måder, og har ikke kun et udtryk.</p>
+      </section>
+    <!-- 2. section -->
+      <section class="grid place-items-center pt-10">
+       <button class="bg-[#EEECDA]/50 pl-4 pr-4 pt-2 pb-2 rounded-md text-[#7B4A38] border-solid border-2 border-[#EEECDA] drop-shadow-md font-semibold hover:bg-[#EEECDA] hover:drop-shadow-2xl">
+        <p>Køb font her</p>
+       </button>
+      </section>
 
-
+    </main>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
