--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@1,200&display=swap" rel="stylesheet">
   </head>
   <body class="bg-[#7B4A38]">
     <main class="mx-4">
@@ -16,7 +20,7 @@
         <div class="pt-10">
           <img src="img/zebra_font.svg" alt="zebra_font">
         </div>
-        <p class="text-[#EEECDA] text-xs pt-4">Zebra fonten er en moderne, legende og eksklusiv font, som bringer det feminine frem på ethvert produkt eller website. Fonten kan bruges på mange forskellige måder, og har ikke kun et udtryk.</p>
+        <p class="text-[#EEECDA] text-xs pt-8">Zebra fonten er en moderne, legende og eksklusiv font, som bringer det feminine frem i ethvert produkt eller website. Fonten kan bruges på mange forskellige måder, og har ikke kun et udtryk.</p>
       </section>
     <!-- 2. section -->
       <section class="grid place-items-center pt-10">
@@ -25,7 +29,35 @@
        </button>
       </section>
 
+    <!-- 3. section -->
+      <section>
+        <div class="text-[#EEECDA] pt-16">
+          <p>Denne tekst er udviklet med tanke på en legende, men stringent udtryk. Jeg startede med at finde inspiration fra andre forskellige fonte. Her fandt jeg nogle som jeg syntes godt om, og tog lidt fra dem hver og mixede det sammen. Derefter begyndte jeg at finjustere på de små detaljer. For eksempel rundede jeg kanterne en smule, så udstykket blev mindre hårdt. 
+            Jeg har også arbejdet på formerne i min skrift, så ‘striberne’ var lige som jeg ville have dem.
+            Denne tekst er udviklet med tanke på en legende, men stringent udtryk. Jeg startede med at finde inspiration fra andre forskellige fonte. Her fandt jeg nogle som jeg syntes godt om, og tog lidt fra dem hver og mixede det sammen. Derefter begyndte jeg at finjustere på de små detaljer. For eksempel rundede jeg kanterne en smule, så udstykket blev mindre hårdt. 
+            Jeg har også arbejdet på formerne i min skrift, så ‘striberne’ var lige som jeg ville have dem.
+            </p>
+            <br>
+            <h3 class="text-2xl">“Navnet ‘Zebra’ kommer fra striberne i skriften, og minder om striberne på en zebra.”</h3>
+            <br>
+            <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="text-[#EEECDA] pt-20">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+        </div>
+      </section>
+
+      <!-- 3. section -->
+      <section>
+        <img src="img/zebra_m_taske.svg" alt="zebra_m_taske">
+        <p class="text-[#EEECDA] pt-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni.</p>
+      </section>
+
+
+
+
     </main>
+    <footer class="text-[#EEECDA]/50 text-center pt-16">Ida Krogh Pedersen</footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
