--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@1,200&display=swap" rel="stylesheet">
   </head>
   <body class="bg-[#7B4A38]">
-    <main class="mx-4">
+    <main>
       <!-- 1. section -->
-      <section>
+      <section class="mx-4">
         <div class="pt-10">
           <img src="img/zebra_font.svg" alt="zebra_font">
         </div>
         <p class="text-[#EEECDA] text-xs pt-8">Zebra fonten er en moderne, legende og eksklusiv font, som bringer det feminine frem i ethvert produkt eller website. Fonten kan bruges på mange forskellige måder, og har ikke kun et udtryk.</p>
       </section>
     <!-- 2. section -->
-      <section class="grid place-items-center pt-10">
+      <section class="grid place-items-center pt-10 mx-4">
        <button class="bg-[#EEECDA]/50 pl-4 pr-4 pt-2 pb-2 rounded-md text-[#7B4A38] border-solid border-2 border-[#EEECDA] drop-shadow-md font-semibold hover:bg-[#EEECDA] hover:drop-shadow-2xl">
         <p>Køb font her</p>
        </button>
       </section>
 
     <!-- 3. section -->
-      <section>
+      <section class="mx-4">
         <div class="text-[#EEECDA] pt-16">
           <p>Denne tekst er udviklet med tanke på en legende, men stringent udtryk. Jeg startede med at finde inspiration fra andre forskellige fonte. Her fandt jeg nogle som jeg syntes godt om, og tog lidt fra dem hver og mixede det sammen. Derefter begyndte jeg at finjustere på de små detaljer. For eksempel rundede jeg kanterne en smule, så udstykket blev mindre hårdt. 
             Jeg har også arbejdet på formerne i min skrift, så ‘striberne’ var lige som jeg ville have dem.
@@ -48,16 +48,21 @@
       </section>
 
       <!-- 3. section -->
-      <section>
+      <section class="mx-4 pb-16">
         <img src="img/zebramtaske.svg" alt="zebra_m_taske">
         <p class="text-[#EEECDA] pt-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni.</p>
+      </section>
+
+      <!-- 4. section -->
+      <section class="bg-[#1E1E1E] pt-8">
+        <img src="img/nedadgående_font.svg" alt="nedadgående_font">
       </section>
 
 
 
 
     </main>
-    <footer class="text-[#EEECDA]/50 text-center pt-16">Ida Krogh Pedersen</footer>
+    <footer class="text-[#EEECDA]/50 text-center pt-16 bg-[#1E1E1E]">Ida Krogh Pedersen</footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
