alt andet undtagen billeder

--- a/src/index.html
+++ b/src/index.html
@@ -16,23 +16,25 @@
   <body class="bg-[#7B4A38]">
     <main>
       <!-- 1. section -->
-      <section class="mx-4">
-        <div class="pt-10">
+      <section class="mx-4 lg:pt-20">
+        <div class="pt-10 lg:pb-32">
           <img src="img/zebra_font.svg" alt="zebra_font">
         </div>
-        <p class="text-[#EEECDA] text-xs pt-8">Zebra fonten er en moderne, legende og eksklusiv font, som bringer det feminine frem i ethvert produkt eller website. Fonten kan bruges på mange forskellige måder, og har ikke kun et udtryk.</p>
+        <p class="text-[#EEECDA] text-xs pt-8 lg:mx-72 lg:text-sm lg:text-center">Zebra fonten er en moderne, legende og eksklusiv font, som bringer det feminine frem i ethvert produkt eller website. Fonten kan bruges på mange forskellige måder, og har ikke kun et udtryk.</p>
       </section>
     <!-- 2. section -->
-      <section class="grid place-items-center pt-10 mx-4 pb-20">
-       <button class="bg-[#EEECDA]/50 pl-4 pr-4 pt-2 pb-2 rounded-md text-[#7B4A38] border-solid border-2 border-[#EEECDA] drop-shadow-md font-semibold hover:bg-[#EEECDA] hover:drop-shadow-2xl">
+      <section class="grid place-items-center pt-8 mx-4 pb-10">
+       <button class="bg-[#EEECDA]/50 pl-4 pr-4 pt-2 pb-2 rounded-md text-[#7B4A38] border-solid border-2 border-[#EEECDA] drop-shadow-md font-semibold hover:bg-[#EEECDA] hover:drop-shadow-2xl lg:pl-10 lg:pr-10 lg:pb-4 lg:pt-4 lg:text-lg">
         <p>Køb font her</p>
        </button>
       </section>
 
+
+
     <!-- 3. section -->
-      <section class="bg-contain bg-center" style="background-image: url(img/zebra_striber.svg)">
+      <section class="grid lg:grid-cols-2 lg:mx-72 lg:pb-40">
         
-         <div class="text-[#EEECDA] pt-16 mx-4">
+         <div class="text-[#EEECDA] lg:pt-16 mx-4">
           <p>Denne tekst er udviklet med tanke på en legende, men stringent udtryk. Jeg startede med at finde inspiration fra andre forskellige fonte. Her fandt jeg nogle som jeg syntes godt om, og tog lidt fra dem hver og mixede det sammen. Derefter begyndte jeg at finjustere på de små detaljer. For eksempel rundede jeg kanterne en smule, så udstykket blev mindre hårdt. 
             Jeg har også arbejdet på formerne i min skrift, så ‘striberne’ var lige som jeg ville have dem.
             Denne tekst er udviklet med tanke på en legende, men stringent udtryk. Jeg startede med at finde inspiration fra andre forskellige fonte. Her fandt jeg nogle som jeg syntes godt om, og tog lidt fra dem hver og mixede det sammen. Derefter begyndte jeg at finjustere på de små detaljer. For eksempel rundede jeg kanterne en smule, så udstykket blev mindre hårdt. 
@@ -44,14 +46,24 @@
             <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="text-[#EEECDA] pt-20 pb-10 mx-4">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+          totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt 
+          explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+          magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor 
+          sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam 
+          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, 
+          nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse 
+          quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur. At vero eos et 
+          accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos 
+          dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia 
+          deserunt mollitia animi, id est laborum et dolorum fuga.
         </div>
       </section>
 
       <!-- 3. section -->
-      <section class="mx-4 pb-16">
+      <section class="mx-4 pb-20">
         <img src="img/zebramtaske.svg" alt="zebra_m_taske">
-        <p class="text-[#EEECDA] pt-4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni.</p>
+        <p class="text-[#EEECDA] pt-10 pb-10 lg:mx-72 lg:pb-40 lg:pt-16">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni.</p>
       </section>
 
       
