--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
       <!-- 3. section -->
       <section class="lg:mx-40 mx-4 pb-20 w-90">
-        <img src="img/lille_zebra_m_taske.svg" alt="zebra_m_taske">
+        <img src="img/zebra_m_taske_2.svg" alt="zebra_m_taske">
         <p class="text-[#EEECDA] pt-10 pb-10 lg:mx-72 lg:pb-40 lg:pt-16">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni.</p>
       </section>
 
@@ -73,7 +73,7 @@
       <picture>
         <source
            media="(min-width: 650px)"
-           srcset="img/zebra_opsætning.svg">
+           srcset="img/zebra_opsætning_2.svg">
         <source
            media="(min-width: 465px)"
            srcset="images/img2.png">
