--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
            srcset="img/zebra_opsætning_2.svg">
         <source
            media="(min-width: 465px)"
-           srcset="images/img2.png">
+           srcset="images/nedadgående_font">
         <img src="img/nedadgående_font.svg" 
         alt="forstørrelse_af_tekst">
     
