--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
            srcset="./assets/zebra_opsætning_2.9e5c7aa3.svg ">
         <source
            media="(min-width: 465px)"
-           srcset="images/img2.png">
+           srcset="images/nedadgående_font">
         <img src="./assets/nedadgående_font.70490dbc.svg" 
         alt="forstørrelse_af_tekst">
     
